Fri Jan 22 10:37:50 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/Makefile.am: do not clean VC++ project files

Thu Jan 21 14:39:15 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c:
	- Really override server settings using extended server syntax

Thu Jan 21 09:33:32 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Makefile.am src/dblib/Makefile.am src/replacements/Makefile.am:
	* src/tds/Makefile.am:
	- Distribute VC++ projects

Thu Jan 21 09:24:26 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/db-lib.vcproj src/replacements/replacements.vcproj:
	* src/tds/TDS.vcproj:
	- Unify includes in VC++ projects, cleanup

Tue Jan 12 10:38:18 EST 2010	JK Lowden <jklowden@freetds.org>
	* Makefile.am src/apps/tsql.c src/replacements/getopt.c
	* win32/config.h
	- Win32 support: Added getopt.c from NetBSD and made tsql 
	- compile without warnings

Tue Jan 12 11:20:04 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/strtok_r.c: Fix strtok_r function

Mon Jan 11 19:14:03 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/login.c src/tds/mem.c:
	* src/tds/util.c:
	- do not allow bot port and instance to be specified

Mon Jan 11 13:03:29 EST 2010	JK Lowden <jklowden@freetds.org>
	* include/replacements.h more care with strcasecmp macro

Mon Jan 11 19:00:10 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/log.c: removed wrongly committed patch

Mon Jan 11 18:56:17 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: unneeded with newer types.h

Mon Jan 11 18:52:52 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: added help

Mon Jan 11 09:00:59 EST 2010	JK Lowden <jklowden@freetds.org>
	* include/replacements.h strcasecmp macro
	* src/apps/defncopy.c unrevert to 1.17 again
	* src/tds/log.c define pthread_self() as zero for win32
